argo-cd/clusters/lgsk8sp1/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - 'argocd.diegoluisi.eti.br'
    tls:
      httpsRedirect: false # sends 301 redirect for http requests
